Rename to ToolsAPI

--- a/ToolsAPI/config.json
+++ b/ToolsAPI/config.json
@@ -2,6 +2,6 @@
     "config": {
         "dbcdir": "Z:/DBCs",
         "definitionsdir": "../../WoWDBDefs/definitions",
-        "cascToolHost":  "https://wow.tools"
+        "cascToolHost":  "http://wowtools.work:8888"
     }
 }
