--- a/ToolsAPI/Properties/launchSettings.json
+++ b/ToolsAPI/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DBCDumpHost": {
+    "ToolsAPI": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
