--- a/ToolsAPI/ToolsAPI.csproj
+++ b/ToolsAPI/ToolsAPI.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="DBDefsLib" Version="1.0.0.20" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
+    <PackageReference Include="MysqlConnector" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
